@@ -1,5 +1,10 @@
 2012-06-21  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/net/bootp.c (grub_net_configure_by_dhcp_ack): Don't create
+	the direct route for server/gateway.
+
+2012-06-21  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/net/bootp.c (grub_net_configure_by_dhcp_ack): Prefer
 	IP address to server name since we may not hame the DNS.
 
